--- a/src/main/resources/fxml/Specialty_Pizza.fxml
+++ b/src/main/resources/fxml/Specialty_Pizza.fxml
@@ -1,68 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--
-  Copyright (c) 2015, 2019, Gluon and/or its affiliates.
-  All rights reserved. Use is subject to license terms.
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
-  This file is available and licensed under the following license:
+<VBox fx:controller="com.group27.RUPizza.Speciality_PizzaController" xmlns:fx="http://javafx.com/fxml" spacing="10">
+    <padding>
+        <Insets top="10" right="10" bottom="10" left="10"/>
+    </padding>
+    <!-- Pizza Selection ComboBox -->
+    <ComboBox fx:id="pizzaComboBox" promptText="Select Pizza Type"/>
 
-  Redistribution and use in source and binary forms, with or without
-  modification, are permitted provided that the following conditions
-  are met:
+    <!-- Pizza Image -->
+    <ImageView fx:id="pizzaImageView" fitWidth="200" fitHeight="200" preserveRatio="true"/>
 
-  - Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
-  - Redistributions in binary form must reproduce the above copyright
-    notice, this list of conditions and the following disclaimer in
-    the documentation and/or other materials provided with the distribution.
-  - Neither the name of Oracle Corporation nor the names of its
-    contributors may be used to endorse or promote products derived
-    from this software without specific prior written permission.
+    <!-- Size Selection -->
+    <HBox spacing="10">
+        <RadioButton fx:id="sizeSmall" text="Small" toggleGroup="$sizeToggleGroup"/>
+        <RadioButton fx:id="sizeMedium" text="Medium" toggleGroup="$sizeToggleGroup"/>
+        <RadioButton fx:id="sizeLarge" text="Large" toggleGroup="$sizeToggleGroup"/>
+    </HBox>
 
-  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
-  A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
-  OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
-  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--->
+    <!-- Toppings List -->
+    <ListView fx:id="toppingsListView" prefHeight="100"/>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+    <!-- Extra Options -->
+    <HBox spacing="10">
+        <CheckBox fx:id="extraCheeseCheckBox" text="Extra Cheese"/>
+        <CheckBox fx:id="extraSauceCheckBox" text="Extra Sauce"/>
+        <CheckBox fx:id="sauceAlfredoCheckBox" text="Alfredo Sauce"/>
+        <CheckBox fx:id="sauceTomatoCheckBox" text="Tomato Sauce"/>
+    </HBox>
 
-<fx:root prefHeight="400.0" prefWidth="640.0" type="VBox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Speciality_PizzaController">
-  <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <children>
-        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-          <font>
-            <Font size="18.0" />
-          </font>
-        </Label>
-            <ListView id="Pizza_List" layoutY="36.0" prefHeight="269.0" prefWidth="640.0" />
-            <Text layoutX="234.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chang's Pizzaria">
-               <font>
-                  <Font name="DejaVu Serif Bold Italic" size="18.0" />
-               </font>
-            </Text>
-            <Text layoutX="36.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Size" />
-            <RadioButton fx:id="Spec_Small" layoutX="68.0" layoutY="313.0" mnemonicParsing="false" text="Small" />
-            <RadioButton fx:id="Spec_Medium" layoutX="128.0" layoutY="313.0" mnemonicParsing="false" text="Medium" />
-            <RadioButton fx:id="Spec_Large" layoutX="204.0" layoutY="313.0" mnemonicParsing="false" text="Large" />
-            <Button fx:id="Spec_Next" layoutX="574.0" layoutY="361.0" mnemonicParsing="false" text="Next" />
-            <Button fx:id="Spec_Cancel" layoutX="10.0" layoutY="361.0" mnemonicParsing="false" text="Cancel" />
-      </children>
-    </AnchorPane>
-  </children>
-</fx:root>
+    <!-- Price Label -->
+    <Label fx:id="totalPriceLabel" text="Total Price: $0.00"/>
+
+    <!-- Confirmation and Refresh Buttons -->
+    <HBox spacing="10" alignment="CENTER_RIGHT">
+        <Button fx:id="refreshButton" text="Refresh"/>
+        <Button fx:id="confirmButton" text="Confirm"/>
+    </HBox>
+</VBox>
