--- a/src/main/resources/fxml/MainView.fxml
+++ b/src/main/resources/fxml/MainView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.group27.RUPizza.MainController">
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.group27.RUPizza.MainController" stylesheets="@stylesMain.css">
 
     <!-- Title -->
     <top>
