--- a/src/main/resources/fxml/MainView.fxml
+++ b/src/main/resources/fxml/MainView.fxml
@@ -27,25 +27,25 @@
             <!-- First Button and Image -->
             <VBox alignment="CENTER" GridPane.rowIndex="0" GridPane.columnIndex="0">
                 <ImageView fx:id="imgSpecialty" fitWidth="160" fitHeight="160" preserveRatio="true" />
-                <Button text="Order Specialty Pizzas" fx:id="btnSpecialty" maxWidth="1.E8" maxHeight="1.E8" style="-fx-background-color: #ffa500; -fx-text-fill: white; -fx-font-size: 12px; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10 20 10 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
+                <Button text="Order Specialty Pizzas" fx:id="btnSpecialty" maxWidth="1.E8" maxHeight="1.E8"/>
             </VBox>
 
             <!-- Second Button and Image -->
             <VBox alignment="CENTER" GridPane.rowIndex="0" GridPane.columnIndex="1">
                 <ImageView fx:id="imgCustom" fitWidth="160" fitHeight="160" preserveRatio="true" />
-                <Button text="Build Your Own Pizza" fx:id="btnCustom" maxWidth="1.0E8" style="-fx-background-color: #ffa500; -fx-text-fill: white; -fx-font-size: 14px; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10 20 10 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
+                <Button text="Build Your Own Pizza" fx:id="btnCustom" maxWidth="1.0E8" />
             </VBox>
 
             <!-- Third Button and Image -->
             <VBox alignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="0">
                 <ImageView fx:id="imgCurrentOrder" fitWidth="160" fitHeight="160" preserveRatio="true" />
-                <Button text="Browse Current Order" fx:id="btnCurrentOrder" maxWidth="1.0E8" style="-fx-background-color: #ffa500; -fx-text-fill: white; -fx-font-size: 14px; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10 20 10 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
+                <Button text="Browse Current Order" fx:id="btnCurrentOrder" maxWidth="1.0E8"/>
             </VBox>
 
             <!-- Fourth Button and Image -->
             <VBox alignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="1">
                 <ImageView fx:id="imgStoreOrders" fitWidth="160" fitHeight="160" preserveRatio="true" />
-                <Button text="Browse Store Orders" fx:id="btnStoreOrders" maxWidth="1.0E8" style="-fx-background-color: #ffa500; -fx-text-fill: white; -fx-font-size: 14px; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10 20 10 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
+                <Button text="Browse Store Orders" fx:id="btnStoreOrders" maxWidth="1.0E8" />
             </VBox>
         </GridPane>
     </center>
